# filenav

./: Dockerfile  README.md
.github/workflows/: wheel.yml  workflow.yml
backend/: environment.yml  pyproject.toml
backend/filenav/: __init__.py  entrypoint.py  main.py
backend/filenav/api/: __init__.py  file.py  item.py  thumbnail.py
frontend/: index.html  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Column.tsx  FilePreview.tsx  StatBar.tsx  icons.tsx  naturalCompare.ts  utils.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  services.gen.ts  types.gen.ts
