[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
default-tag = "v0.0.0"

[project]
name = "filenav"
dynamic = ["version"]
dependencies = [
    "fastapi[standard]",
    "av",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "build",
]

[project.scripts]
filenav = "filenav:run"

[project.urls]
Repository = "https://github.com/tianze0926/filenav"
